--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taller de Programación 2</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -32,6 +32,7 @@
       </div>
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
+
